Added proper statistics panel, still needs layout improvements